Logos align correctly

--- a/app.css
+++ b/app.css
@@ -8,10 +8,16 @@ body{
     margin-right: 0px;
 }
 
-h1
+.titlepage
 {
+    display: inline-block;
     color: #FFFFFF;
     text-align: center;
+    padding: 0px;
+    font: #FFFFFF;
+    font-weight: bolder;
+    font-size: 30px;
+    margin: 1px;
 }
 
 h2
@@ -31,7 +37,7 @@ h3
     filter: brightness(10);
     width: 150px;
     vertical-align: middle;
-    padding: 10px;
+    padding: 5px;
     border-right: solid #FFFFFF;
 }
 
